amadeus/static/css/base/amadeus.css
/* ... */
.goal_item {
    margin-bottom: 20px;
}

.goal_item h4 {
    font-weight: 700;
    font-size: 20px;
}

div.dataTables_wrapper div.dataTables_paginate {
    text-align: center !important;
}
/* End Goals */


/* Reports */

.report-menu-choice li{
    width: 15%;
    text-align: center;
}
#report-header{
    padding-left: 0px;
}

#report-header li {
    display: inline;
    margin-right: 20px;
    font-size: 16px;
}

#report-info{
    padding-left: 0px;
}

#report-info li{
    display: inline;
    margin-right: 30px;
}

.delete-row{
    float: right;
    background-color: gray;
    color: white;
    padding: 5px 20px;
    font-size: 12px;
    text-decoration: none;
    border: none;
    border-radius: 2px;
    position: relative;
    margin: 10px 20px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0;
}

    h5 {
    position: relative;
    margin-top: 20px;
    margin-bottom: 10px;
  }


  h5.one {
    margin-top: 0;
    color: #bdbdbd;
  }
  
  h5.one:before {
    content: "";
    display: block;
    border-top: solid 1px #bdbdbd;
    width: 100%;
    height: 1px;
    position: absolute;
    top: 50%;
    z-index: 1;
  }
  
  h5.one span {
    background: #eee;
    padding-right: 20px;
    position: relative;
    z-index: 5;
  }

/* End Reports */

/* Chat */
.participants-group, .talks-group {
    margin-left: 40px;
}

.participant {
    margin-bottom: 10px;
    border-width: 1px;
    border-style: solid;
    padding-right: 10px;
    height: 70px;
}

.participant .user-img {
    height: 70px;
    padding: 3px 0px 5px 0px;
    text-align: center;
}

.participant .user-img img {
    height: 100%;
    margin: 0 auto;
}

.participant .user-info {
    padding: 7px 15px;
}
.participant .user-info .status, .modal_profile_sidebar .status {
    width: 20px;
    height: 20px;
    border-width: 1px;
    border-style: solid;
    border-radius: 10px;
    margin-right: 10px;
    position: relative;
    top: 3px;
    display: inline-block;
    border-spacing: 0;
    border-collapse: collapse;
}
.participant .user-info h4 {
    font-weight: 700;
    line-height: 2.0;
}

.participant .buttons {
    padding: 7px 0px;
}

.modal_profile {
    font-size: 14px;
}

.modal_profile_sidebar {
    text-align: center;
}
.modal_profile_sidebar h4 {
    font-size: 16px;
}

.talk_header {
    padding-top: 5px !important;
    padding-left: 10px !important;
}
.talk_header .close {
    padding-top: 17px !important;
}
.talk_header, .talk_header img {
    height: 50px;
}
.talk_header h4 {
    margin-left: 10px;
    margin-top: 13px;
    margin-bottom: 14px;
}

.talk_body {
    padding: 0px !important;
}

.talk-filter {
    padding-top: 1px;
    padding-left: 12px;
    margin-bottom: 10px;
}
.talk-filter h4 {
    font-weight: 700;
    margin-bottom: 5px !important;
}
.talk-filter .checkbox {
    margin-right: 10px;
}

.messages-container {
    height: 400px;
    overflow-y: scroll;
    border-top-width: 1px;
    border-top-style: solid;
}

.message-sender {
    padding: 0px !important;
}
.message-sender-container {
    padding: 5px;
}
.message-sender-container .user-img {
    padding: 0px;
    height: 46px;
}
.message-sender-container .user-img img {
    max-height: 46px;
}
.message-sender-container .message-field {
    padding-left: 10px;
    padding-right: 0px;
    height: 46px;
    text-align: left;
}
.message-sender-container .message-field h4 {
    margin-top: 0px;
}
.message-sender-container .message-field div {
    height: 46px;
    padding-top: 14px;
    padding-bottom: 14px;
    padding-left: 10px;
    padding-right: 10px;
    border-width: 1px;
    border-style: solid;
}

.talking-header {
    line-height: 0.5 !important;
    margin-top: 0px;
}

.talk-last_msg {
    font-size: 14px;
}
/* End Chat */

